# django-likes

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  test_settings.py  tox.ini
likes/: apps.py  exceptions.py  middleware.py  signals.py  tasks.py  test_settings.py  tests.py  urls.py  utils.py  views.py
likes/media/likes/includes/: likes.js
likes/static/likes/includes/: likes.js
likes/templates/likes/inclusion_tags/: likes.html
likes/templatetags/: likes_inclusion_tags.py
likes/tests/: conftest.py  settings.py  test_views.py  urls.py
likes/tests/requirements/: 110.txt  111.txt  18.txt  19.txt  20.txt  21.txt
likes/tests/settings/: 110.py  21.py
tests/: tests.py
